2009-11-18  Eric Seidel  <eric@webkit.org>

        Reviewed by Darin Adler.

        workqueue.py results in totally broken commit-queue UI
        https://bugs.webkit.org/show_bug.cgi?id=31645

        * Scripts/bugzilla-tool:
         - Remove unneeded use of PatchCollection.
         - Grab a new copy of the cq'd patches every run of the queue.

2009-11-18  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Make the Mac Geolocation API async.

        Update DRT to use the new async Mac Geolocation API.

        * DumpRenderTree/mac/UIDelegate.mm:
        (-[UIDelegate webView:decidePolicyForGeolocationRequestFromOrigin:frame:listener:]):

2009-11-18  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        Add and option to toggle HTML5 datalist support to build-webkit
        https://bugs.webkit.org/show_bug.cgi?id=31599

        * Scripts/build-webkit:

2009-11-18  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        Enable wx plugin support using the Windows implementation as a base.
        
        https://bugs.webkit.org/show_bug.cgi?id=31636

        * wx/build/settings.py:

2009-11-18  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        Change the initialization order so that the controllers
        will be created before exporting them to the JS DOM window.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::DumpRenderTree::DumpRenderTree):

2009-11-18  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        Fix a code copy and paste error. m_page should be page.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::DumpRenderTree::createWindow):

2009-11-17  Mark Rowe  <mrowe@apple.com>

        Reviewed by Alexey Proskuryakov.

        <http://webkit.org/b/31603> WebSocket server is confused if WebKit tests run from within /tmp on Mac OS X
