@@ -25,7 +25,9 @@
 
                     { "name": "szeged-linux-1", "platform": "qt"},
 
-                    { "name": "google-slave-1", "platform": "chromium-win" }
+                    { "name": "google-windows-1", "platform": "chromium" },
+                    { "name": "google-mac-1", "platform": "chromium" },
+                    { "name": "google-linux-1", "platform": "chromium" }
                   ],
 
     "builders":   [ { "name": "Tiger Intel Release", "type": "BuildAndTest", "builddir": "tiger-intel-release",
@@ -98,9 +100,19 @@
                       "slavenames": ["szeged-linux-1"]
                     },
                     {
-                      "name": "Chromium Win Release", "type": "ChromiumBuild", "builddir": "chromium-win-release",
-                      "platform": "chromium-win", "configuration": "release", "architectures": ["i386"],
-                      "slavenames": ["google-slave-1"]
+                      "name": "Chromium Win Release", "type": "Build", "builddir": "chromium-win-release",
+                      "platform": "chromium", "configuration": "release", "architectures": ["i386"],
+                      "slavenames": ["google-windows-1"]
+                    },
+                    {
+                      "name": "Chromium Mac Release", "type": "Build", "builddir": "chromium-mac-release",
+                      "platform": "chromium", "configuration": "release", "architectures": ["i386"],
+                      "slavenames": ["google-mac-1"]
+                    },
+                    {
+                      "name": "Chromium Linux Release", "type": "Build", "builddir": "chromium-linux-release",
+                      "platform": "chromium", "configuration": "release", "architectures": ["i386"],
+                      "slavenames": ["google-linux-1"]
                     }
                   ],
 
@@ -109,7 +121,7 @@
                                        "SnowLeopard Intel Release (Build)", "SnowLeopard Intel Leaks",
                                        "Windows Release (Build)", "Windows Debug (Build)",
                                        "GTK Linux Release", "Qt Linux Release",
-                                       "Chromium Win Release"]
+                                       "Chromium Win Release", "Chromium Mac Release", "Chromium Linux Release"]
                     },
                     { "type": "Triggerable", "name": "leopard-intel-release-tests",
                       "builderNames": ["Leopard Intel Release (Tests)"]
