@@ -48,63 +48,22 @@ class CheckOutSource(source.SVN):
         source.SVN.__init__(self, baseURL=self.baseURL, defaultBranch="trunk", mode=self.mode, *args, **kwargs)
 
 
-# FIXME: Remove this step once Chromium WebKit port build system is decoupled from
-# Chromium (https://bugs.webkit.org/show_bug.cgi?id=28396)
-class UpdateChromiumSource(shell.ShellCommand):
-    command = ["gclient", "sync"]
-    name = "update-chromium"
-    description = ["updating chromium source"]
-    descriptionDone = ["updated"]
-    haltOnFailure = True
-
-    def createSummary(self, log):
-        scraper = re.compile(r"^________ running '[^\n]+third_party[/\\]WebKit[^\n]+$\n(?:^[UA]\W+[^\n]+$\n)*^(?:Updated to|At) revision (\d+)", re.DOTALL | re.MULTILINE)
-        revisions = scraper.findall(log.getText())
-        gotRevision = "??" # This matches SVN unknown revision response.
-        if len(revisions):
-            gotRevision = "r%s" % revisions[-1]
-        self.descriptionDone = ["updated", gotRevision]
-
-    def start(self):
-        os = self.getProperty("fullPlatform").split('-')[1]
-        if os == "win":
-            self.setCommand(["gclient.bat", "sync"])
-        revision = self.getProperty("revision")
-        if revision:
-            command = self.command[:]
-            command.append("--revision=src/third_party/WebKit@%d" % revision)
-            self.setCommand(command)
-        return shell.ShellCommand.start(self)
-
-
-# FIXME: Remove this step once Chromium WebKit port build system is decoupled from
-# Chromium (https://bugs.webkit.org/show_bug.cgi?id=28396)
-class CompileChromiumWebKit(shell.ShellCommand):
-    command = ["python", "../../../scripts/slave/compile.py"]
-    name = "build-chromium"
-    description = ["compiling"]
-    descriptionDone = ["compiled"]
-    haltOnFailure = True
-
-    def start(self):
-        os = self.getProperty("fullPlatform").split('-')[1]
-        command = self.command[:]
-        if os == "win":
-            command.extend(["--solution=webkit.sln", "--build-dir=src\\webkit", "--", "/project", "webcore"])
-        elif os == "mac":
-            command.extend(["--solution=__solution__", "--build-dir=src/build", "--", "-project", "../webkit/webkit.xcodeproj", "-target", "webcore"])
-        self.setCommand(command)
-        return shell.ShellCommand.start(self)
-
-
 class InstallWin32Dependencies(shell.Compile):
     description = ["installing dependencies"]
     descriptionDone = ["installed dependencies"]
     command = ["perl", "./WebKitTools/Scripts/update-webkit-auxiliary-libs"]
 
 
+class InstallChromiumDependencies(shell.ShellCommand):
+    name = "gclient"
+    description = ["updating chromium dependencies"]
+    descriptionDone = ["updated chromium dependencies"]
+    command = ["perl", "./WebKitTools/Scripts/update-webkit-chromium"]
+    haltOnFailure = True
+
+
 def appendCustomBuildFlags(step, platform):
-    if platform in ('gtk', 'wx', 'qt'):
+    if platform in ('gtk', 'wx', 'qt', 'chromium'):
         step.setCommand(step.command + ['--' + platform])
 
 
@@ -320,23 +279,17 @@ class Factory(factory.BuildFactory):
         self.addStep(CheckOutSource)
         if platform == "win":
             self.addStep(InstallWin32Dependencies)
-
-# FIXME: Remove this factory once Chromium WebKit port build system is decoupled from
-# Chromium (https://bugs.webkit.org/show_bug.cgi?id=28396)
-class ChromiumBuildFactory(factory.BuildFactory):
-    def __init__(self, platform, configuration, architectures):
-        factory.BuildFactory.__init__(self)
-        self.addStep(ConfigureBuild, platform=platform, configuration=configuration, architecture=" ".join(architectures), buildOnly=True)
-        self.addStep(UpdateChromiumSource)
-        self.addStep(CompileChromiumWebKit)
+        if platform == "chromium":
+            self.addStep(InstallChromiumDependencies)
 
 class BuildFactory(Factory):
-    def __init__(self, platform, configuration, architectures, triggers):
+    def __init__(self, platform, configuration, architectures, triggers=None):
         Factory.__init__(self, platform, configuration, architectures, True)
         self.addStep(CompileWebKit)
-        self.addStep(ArchiveBuiltProduct)
-        self.addStep(UploadBuiltProduct)
-        self.addStep(trigger.Trigger, schedulerNames=triggers)
+        if triggers:
+            self.addStep(ArchiveBuiltProduct)
+            self.addStep(UploadBuiltProduct)
+            self.addStep(trigger.Trigger, schedulerNames=triggers)
 
 class TestFactory(Factory):
     def __init__(self, platform, configuration, architectures):
