@@ -1,3 +1,14 @@
+2009-11-18  Yaar Schnitman  <yaar@chromium.org>
+
+        Reviewed by Darin Adler.
+
+        Configuration for Chromium Build Slaves.
+
+        https://bugs.webkit.org/show_bug.cgi?id=31442
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+        * BuildSlaveSupport/build.webkit.org-config/master.cfg:
+
 2009-11-18  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Darin Adler.
